--- a/template/index.html
+++ b/template/index.html
@@ -112,7 +112,7 @@
 		To your wealth and success!<br />
 		<br />
 		<br />
-		<img src="[% image_url %]" width="160" alt="" title="" border="0" align="" />
+		<img src="[% image_url %]" width="200" alt="" title="" border="0" align="" />
 
 	<br />
 
@@ -121,22 +121,13 @@
 
 		<span class="signature">[% first_name %]</span></p>
 
+                <p>
 	<a href="[% facebook_url %]">Facebook</a>
+                </p>
 
-	<br />
-Skype: [% skype_id %]
-<script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
-<div id="genSkypeCall_01">
-    <script type="text/javascript">
-        Skype.ui({
-            name: "call",
-            element: "genSkypeCall_01",
-            participants: ["[% skype_id %]"],
-            imageSize: 32,
-            imageColor: "skype"
-        });
-    </script>
-</div>
+	<p>
+          Skype: [% skype_id %]
+        </p>
 
 <br />
 
@@ -272,8 +263,18 @@ new debit card.</a> <font size="2">Further information will be sent about the pa
 </div>
 	<div id="fullfooter">
 		<div id="footer">
-		<br /> <a href="dobuygold.html" title="Do buy gold bars" onMouseOver="window.status='Do buy gold bars'; return true" onMouseOut="window.status=' '">Why money will become worthless</a> |  <a href="spendablegold.html" title="gold exchange">List your business and get FREE
-ADVERTISING </a> | <a href="getgoldforfree.html" title="Get Gold For Free">How to get 13 kilos of gold for free.</a>
+		<br />
+                <a href="dobuygold.html" title="Do buy gold bars"
+                   onMouseOver="window.status='Do buy gold bars';
+                                return true"
+                   onMouseOut="window.status=' '">Why money will
+                be worthless</a> |
+                <a href="spendablegold.html" title="gold exchange">List your business and get FREE
+ADVERTISING </a>
+| <a href="getgoldforfree.html" title="Get Gold For Free">How to get
+13 kilos of gold for free.</a>
+| <a href="http://karatbarsintro.com" target="_blank">Complete
+info</a>
 			<ul>
 				<li class="companycopy">Copyright &copy 2012 kbgoldintro.com</li><!-- ADD YOUR COMPANY INFO AND LINKS HERE -->
 
