--- a/template/getgoldforfree.html
+++ b/template/getgoldforfree.html
@@ -58,7 +58,10 @@
 
 				<br />
 				<br />
-					<div align="center"><iframe width="480" height="360" src="http://www.youtube.com/embed/--_Hv_A0eP8?rel=0" frameborder="0" allowfullscreen></iframe></div>
+					<div align="center">
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/6D4tBRZGA3k?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 				<div class="style1">
 <br />
 <br />
